--- a/ALP_V25_Filipe.ipynb
+++ b/ALP_V25_Filipe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPj+n4hoFoGQOiarcLKFZvF",
+      "authorship_tag": "ABX9TyMuzeQuJBzL08ZiyAma2arI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,37 +81,26 @@
     {
       "cell_type": "code",
       "source": [
-        "a = int(input(\"Digite o valor de a: \"))\n",
-        "b = int(input(\"Digite o valor de b: \"))\n",
-        "print(a+b)"
+        "a = int(input(\"Digite o valor de a\"))\n",
+        "b = int(input(\"Digite o valor de b\"))\n",
+        "print(a-b)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 211
+          "base_uri": "https://localhost:8080/"
         },
         "id": "HHkuGiy_nHL5",
-        "outputId": "fabc06a6-24f5-490e-b214-3f1a5a9edf89"
+        "outputId": "961eee53-742f-4589-db07-f9bcf3d27a7e"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Digite o valor de a: 1\n",
-            "Digite o valor de b: 2]\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "invalid literal for int() with base 10: '2]'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-3816332135.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Digite o valor de a: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Digite o valor de b: \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '2]'"
+            "Digite o valor de a5\n",
+            "Digite o valor de b3\n",
+            "2\n"
           ]
         }
       ]
@@ -371,6 +360,407 @@
           "text": [
             "Digite sua idade: 15\n",
             "Você é um adolescente!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "ATIVIDADES AVALIATIVAS"
+      ],
+      "metadata": {
+        "id": "FWxyKlJess1z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número e informe se ele é maior que 10. Crie um algoritmo em Python para fazer essa verificação."
+      ],
+      "metadata": {
+        "id": "Ea9dC0Qwt4_i"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = float(input(\"Digite um número: \"))\n",
+        "if numero > 10:\n",
+        "    print(\"O número é maior que 10.\")\n",
+        "else:\n",
+        "    print(\"O número não é maior que 10.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bK2XL1q-t9Kz",
+        "outputId": "5e897069-35e9-4c75-86ef-9429baeda2da"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 22\n",
+            "O número é maior que 10.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número inteiro e informe se ele é par. Crie um algoritmo em Python que verifique se o número é divisível por 2."
+      ],
+      "metadata": {
+        "id": "0dSqJe6juGNq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = int(input(\"Digite um número inteiro: \"))\n",
+        "if numero % 2 == 0:\n",
+        "    print(\"O número é par.\")\n",
+        "else:\n",
+        "    print(\"O número é ímpar.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cBS5mCAduJ8m",
+        "outputId": "9068ac4f-e297-4135-926a-109fbd05d7e3"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro: 13\n",
+            "O número é ímpar.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um nome e informe se ele contém a letra \"a\". Crie um algoritmo em Python que faça essa verificação."
+      ],
+      "metadata": {
+        "id": "GPoAV7pjuQqh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nome = input(\"Digite um nome: \")\n",
+        "if \"a\" in nome.lower():\n",
+        "    print(\"O nome contém a letra 'a'.\")\n",
+        "else:\n",
+        "    print(\"O nome não contém a letra 'a'.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cnk9WxnZuUOM",
+        "outputId": "70665f78-92ca-4311-ddef-204f5f2c8ad1"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um nome: Filipe\n",
+            "O nome não contém a letra 'a'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número e informe se ele é múltiplo de 5. Crie um algoritmo em Python que verifique se o número é divisível por 5"
+      ],
+      "metadata": {
+        "id": "rpq84ZX4ukmY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = float(input(\"Digite um número: \"))\n",
+        "if numero % 5 == 0:\n",
+        "    print(\"O número é múltiplo de 5.\")\n",
+        "else:\n",
+        "    print(\"O número não é múltiplo de 5.\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0cgLT7I5uoEQ",
+        "outputId": "73b82b63-9583-4699-a564-11a359f3aeb0"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 25\n",
+            "O número é múltiplo de 5.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça a temperatura atual e informe se está quente (acima de 30°C) ou frio (30°C ou menos). Crie um algoritmo em Python para essa verificação."
+      ],
+      "metadata": {
+        "id": "P8wlUXJzusk_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "temperatura = float(input(\"Digite a temperatura atual (°C): \"))\n",
+        "if temperatura > 20:\n",
+        "    print(\"Está quente!\")\n",
+        "else:\n",
+        "    print(\"Está frio!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ABjjKv_uxXf",
+        "outputId": "45602479-40f2-4125-860c-e4b7c3c90920"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a temperatura atual (°C): 30\n",
+            "Está quente!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça ao usuário para digitar \"S\" para continuar ou \"N\" para sair e informe a ação correspondente. Crie um algoritmo em Python que faça essa validação e exiba a mensagem correta."
+      ],
+      "metadata": {
+        "id": "0cTDQtXJvUAO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resposta = input('Digite \"S\" para continuar ou \"N\" para sair: ').strip().upper()\n",
+        "if resposta == \"S\":\n",
+        "    print(\"Você escolheu continuar!\")\n",
+        "elif resposta == \"N\":\n",
+        "    print(\"Você escolheu sair!\")\n",
+        "else:\n",
+        "    print(\"Opção inválida. Digite apenas S ou N.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2NIQY2G3vUum",
+        "outputId": "8e54a4ae-f44d-4855-e9df-3506850455f9"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite \"S\" para continuar ou \"N\" para sair: S\n",
+            "Você escolheu continuar!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número e informe se ele é negativo, zero ou positivo. Crie um algoritmo em Python para classificar o número."
+      ],
+      "metadata": {
+        "id": "7j-ve4GMveB2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = float(input(\"Digite um número: \"))\n",
+        "if numero > 0:\n",
+        "    print(\"O número é positivo.\")\n",
+        "elif numero < 0:\n",
+        "    print(\"O número é negativo.\")\n",
+        "else:\n",
+        "    print(\"O número é zero.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IZ_KyKF7vqEO",
+        "outputId": "c9357ceb-2213-479d-a538-0eb1dc0e9653"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: 13\n",
+            "O número é positivo.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um número de 1 a 7 e informe o dia da semana correspondente. Crie um algoritmo em Python que associe o número ao dia correto"
+      ],
+      "metadata": {
+        "id": "MKKZC-3Bx4aM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numero = int(input(\"Digite um número de 1 a 7: \"))\n",
+        "\n",
+        "dias = {\n",
+        "    1: \"Domingo\",\n",
+        "    2: \"Segunda-feira\",\n",
+        "    3: \"Terça-feira\",\n",
+        "    4: \"Quarta-feira\",\n",
+        "    5: \"Quinta-feira\",\n",
+        "    6: \"Sexta-feira\",\n",
+        "    7: \"Sábado\"\n",
+        "}\n",
+        "\n",
+        "if numero in dias:\n",
+        "    print(f\"O dia correspondente é {dias[numero]}.\")\n",
+        "else:\n",
+        "    print(\"Número inválido! Digite um número entre 1 e 7.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1JAVACVVx7gW",
+        "outputId": "9c921737-c781-4a9e-b6d6-21f7ee834378"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número de 1 a 7: 3\n",
+            "O dia correspondente é Terça-feira.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça um ano e informe se ele é bissexto. Crie um algoritmo em Python que verifique se o ano é divisível por 4 e não por 100, exceto se também for divisível por 400."
+      ],
+      "metadata": {
+        "id": "1L8G81COyBGz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ano = int(input(\"Digite um ano: \"))\n",
+        "if (ano % 4 == 0 and ano % 100 != 0) or (ano % 400 == 0):\n",
+        "    print(\"O ano é bissexto.\")\n",
+        "else:\n",
+        "    print(\"O ano não é bissexto.\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nmh8FmXsyFDj",
+        "outputId": "95a5ce7b-f0d2-4069-e2ad-8feb0553fbd6"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um ano: 2010\n",
+            "O ano não é bissexto.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Peça a quantidade de horas trabalhadas e o valor por hora. Se trabalhou até 40 horas, calcule o salário normalmente (horas × valor por hora). Se trabalhou mais de 40 horas, as horas extras devem ter um adicional de 50% (horas extras × valor por hora × 1.5). Crie um algoritmo em Python que realize esse cálculo corretamente."
+      ],
+      "metadata": {
+        "id": "nMvNqIeIyMvL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "horas = float(input(\"Digite a quantidade de horas trabalhadas: \"))\n",
+        "valor_hora = float(input(\"Digite o valor por hora: \"))\n",
+        "\n",
+        "if horas <= 40:\n",
+        "    salario = horas * valor_hora\n",
+        "else:\n",
+        "    horas_extras = horas - 40\n",
+        "    salario = (40 * valor_hora) + (horas_extras * valor_hora * 1.5)\n",
+        "\n",
+        "print(f\"O salário total é R$ {salario:.2f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "chsti_foySnq",
+        "outputId": "fb8f0e8e-2d5b-45b5-95db-db3ade5c8f7c"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a quantidade de horas trabalhadas: 48\n",
+            "Digite o valor por hora: 1945\n",
+            "O salário total é R$ 101140.00\n"
           ]
         }
       ]
